# Redstar-Designer

./: .gitignore  CMakeLists.txt  README.md
Source/: Identifiers.h  Main.cpp  MainComponent.cpp  MainComponent.h
Source/Domain/: AmpState.cpp  AmpState.h  PresetLibrary.cpp  PresetLibrary.h  PresetSerializer.cpp  PresetSerializer.h
Source/UI/: ParameterPanel.cpp  ParameterPanel.h  PatchBrowser.cpp  PatchBrowser.h
